--- a/config/database.yml
+++ b/config/database.yml
@@ -38,7 +38,7 @@ development: &development
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *development
 
 staging:
@@ -97,3 +97,6 @@ sfx4_global:
   username: <%= Settings.sfx_databases.sfx4_global.username %>
   password: <%= Settings.sfx_databases.sfx4_global.password %>
 <% end %>
+
+cucumber:
+  <<: *test
